<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_dialog">

    <ImageView
        android:id="@+id/imgMessage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/ic_post" />

    <ImageButton
        android:id="@+id/btnCloseMessage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/tvMessage"
        android:textColor="@color/rich_black"
        android:text="@string/no_posts_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_list"
        android:maxLines="5"
        android:padding="@dimen/padding_list_items"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/margin_20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_red"
            android:lineSpacingExtra="5.3sp"
            android:text="@string/btn_accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14.73sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>