<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.DetailsActivity"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarDetails"
            layout="@layout/toolbar_main"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetails"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/title_description"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:textColor="@color/persian_indigo"
            android:layout_marginTop="@dimen/margin_from_toolbar"
            android:layout_marginStart="@dimen/margin_start_title"
            />

        <TextView
            android:id="@+id/tvPostBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="est natus enim nihil est dolore omnis voluptatem numquam et omnis occaecati quod ullam at\nvoluptatem error expedita pariatur\nnihil sint nostrum voluptatem reiciendis et"
            android:textColor="@color/rich_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDescription"
            android:layout_marginTop="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_text_body"
            android:layout_marginEnd="@dimen/margin_text_body"
            />

        <TextView
            android:id="@+id/tvTitleUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvPostBody"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/title_user"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:textColor="@color/persian_indigo"
            android:layout_marginTop="@dimen/margin_from_toolbar"
            android:layout_marginStart="@dimen/margin_start_title"
            />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="name"
            android:textColor="@color/rich_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleUser"
            android:layout_marginTop="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_text_body"
            android:layout_marginEnd="@dimen/margin_text_body"
            />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Email"
            android:textColor="@color/rich_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            android:layout_marginTop="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_text_body"
            android:layout_marginEnd="@dimen/margin_text_body"
            />

        <TextView
            android:id="@+id/tvUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Phone"
            android:textColor="@color/rich_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tvUserEmail"
            android:layout_marginTop="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_text_body"
            android:layout_marginEnd="@dimen/margin_text_body"
            />

        <TextView
            android:id="@+id/tvUserWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Website"
            android:textColor="@color/rich_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tvUserPhone"
            android:layout_marginTop="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_text_body"
            android:layout_marginEnd="@dimen/margin_text_body"
            />

        <ProgressBar
            android:id="@+id/progressBarDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/tvUserPhone"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserPhone"
            app:layout_constraintStart_toStartOf="@+id/tvUserPhone"
            app:layout_constraintEnd_toEndOf="@id/tvUserPhone"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvTitleComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvUserWebsite"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/title_comments"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:textColor="@color/light_green"
            android:layout_marginTop="@dimen/margin_from_toolbar"
            android:layout_marginEnd="@dimen/margin_text_body"
            android:layout_marginStart="@dimen/margin_start_title"
            android:padding="@dimen/button_padding"

            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listComments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleComments"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>